--- a/practical-01.Rmd
+++ b/practical-01.Rmd
@@ -38,7 +38,7 @@ Whilst SOI covers all people convicted it does not cover every conviction served
 Taking these features together, SOI is best understood as a record of all proceedings conducted in Scottish courts for offences other than motor vehicle offences, drunkenness and crimes against public justice between 1989 and August 2013.
 
 
-### SOI and migration - save this for measurement error?
+### SOI and migration
 As SOI is based on court records it does not rely on a list of the registered population, unlike Nordic register data (Lyngstad and Skardhamar 2011). However, changes in the non-resident population due to migration flows, as well as mortality amongst the convicted population, may respectively lead to attrition and right-censoring in the SOI. This is because in SOI it is not possible to tell if a period without a conviction is because a particular person has not committed a criminalizable act, they have not been convicted for any offences they have committed, the person has died or whether they have emigrated.
 
 ... Whilst migration flows are not controlled for directly in the longitudinal analysis, examining migration patterns over the period of analysis can help understand their potential effects. Recent migration flows have a distinct age pattern, with large numbers of people moving to Scotland in their late teens to study at Scottish universities and then leave Scotland in their early twenties (National Records of Scotland 2015:45). If there is an increase in desistance transitions due to increased migration should be most prominent at the peak ages when people leave Scotland, between 23 and 25. If there is increased onset it should be seen most people arrive between the ages of 19 and 23. Moreover, migration into Scotland increased particularly after 2005 (NRS 2014:41), and so these trends should be particularly pronounced after this point. If trends in convictions pathways observed in Chapter Nine do not align with the description of migration flows above – concentrated amongst young people after 2005 – it can be assumed that observed trends in convictions pathways are not caused by changes in migration flows.
