mostly aesthetic updates

--- a/references.bib
+++ b/references.bib
@@ -10720,3 +10720,18 @@ Subject\_term: Computational biology and bioinformatics, Computer science, Resea
   pmid = {26180985},
   file = {/home/work/Zotero/storage/STYVJIHS/Kaba et al. - 2015 - Disparities in Mental Health Referral and Diagnosis in the New York City Jail Mental Health Service.pdf}
 }
+
+@book{leglerChapterPoissonRegression,
+  title = {Chapter 4 {{Poisson Regression}} {\textbar} {{Beyond Multiple Linear Regression}}},
+  author = {Legler, Paul Roback {and} Julie},
+  urldate = {2024-08-29},
+  abstract = {An applied textbook on generalized linear models and multilevel models for advanced undergraduates, featuring many real, unique data sets. It is intended to be accessible to undergraduate students who have successfully completed a regression course. Even though there is no mathematical prerequisite, we still introduce fairly sophisticated topics such as likelihood theory, zero-inflated Poisson, and parametric bootstrapping in an intuitive and applied manner. We believe strongly in case studies featuring real data and real research questions; thus, most of the data in the textbook arises from collaborative research conducted by the authors and their students, or from student projects. Our goal is that, after working through this material, students will develop an expanded toolkit and a greater appreciation for the wider world of data and statistical modeling.},
+  file = {/home/work/Zotero/storage/3VUSGDN3/ch-poissonreg.html}
+}
+
+@book{roback2021beyond,
+  title = {Beyond Multiple Linear Regression: Applied Generalized Linear Models and Multilevel Models in {{R}}},
+  author = {Roback, Paul and Legler, Julie},
+  year = {2021},
+  publisher = {{Chapman and Hall/CRC}}
+}
