--- a/references.bib
+++ b/references.bib
@@ -10735,3 +10735,27 @@ Subject\_term: Computational biology and bioinformatics, Computer science, Resea
   year = {2021},
   publisher = {{Chapman and Hall/CRC}}
 }
+
+@article{greenlandIntervalEstimationSimulation2004a,
+  title = {Interval Estimation by Simulation as an Alternative to and Extension of Confidence Intervals},
+  author = {Greenland, Sander},
+  year = {2004},
+  month = dec,
+  journal = {International Journal of Epidemiology},
+  volume = {33},
+  number = {6},
+  pages = {1389--1397},
+  issn = {0300-5771},
+  doi = {10.1093/ije/dyh276},
+  urldate = {2024-08-29},
+  abstract = {There are numerous techniques for constructing confidence intervals, most of which are unavailable in standard software. Modern computing power allows one to replace these techniques with relatively simple, general simulation methods. These methods extend easily to incorporate sources of uncertainty beyond random error. The simulation concepts are explained in an example of estimating a population attributable fraction, a problem for which analytical formulas can be quite unwieldy. First, simulation of conventional intervals is illustrated and compared to bootstrapping. The simulation is then extended to include sampling of bias parameters from prior distributions. It is argued that the use of almost any neutral or survey-based prior that allows non-zero values for bias parameters will produce an interval estimate less misleading than a conventional confidence interval. Along with simplicity and generality, the ease with which simulation can incorporate these priors is a key advantage over conventional methods.},
+  file = {/home/work/Zotero/storage/VAM8VR7F/Greenland - 2004 - Interval estimation by simulation as an alternative to and extension of confidence intervals.pdf;/home/work/Zotero/storage/2LLJD22T/866591.html}
+}
+
+@article{officefornationalstatisticsImprovingVictimisationEstimates2019,
+  title = {Improving {{Victimisation Estimates Derived}} from the {{Crime Survey}} for {{England}} and {{Wales}}},
+  author = {{Office for National Statistics}},
+  year = {2019},
+  langid = {english},
+  file = {/home/work/Zotero/storage/VKG86PTR/Improving Victimisation Estimates Derived from the Crime Survey for England and Wales.pdf}
+}
