small tweaks to intro

--- a/references.bib
+++ b/references.bib
@@ -10759,3 +10759,19 @@ Subject\_term: Computational biology and bioinformatics, Computer science, Resea
   langid = {english},
   file = {/home/work/Zotero/storage/VKG86PTR/Improving Victimisation Estimates Derived from the Crime Survey for England and Wales.pdf}
 }
+
+@article{youngPraiseDangerousThoughts2003,
+  title = {In Praise of Dangerous Thoughts},
+  author = {Young, Jock},
+  year = {2003},
+  month = jan,
+  journal = {Punishment \& Society},
+  volume = {5},
+  number = {1},
+  pages = {97--107},
+  publisher = {SAGE Publications},
+  issn = {1462-4745},
+  doi = {10.1177/1462474503005001049},
+  urldate = {2024-08-29},
+  langid = {english}
+}
